Fix pandoc beamer issue with tables

--- a/materials/header.tex
+++ b/materials/header.tex
@@ -128,3 +128,6 @@ Simulated futures from an ETS model
 % \AtEveryCitekey{\clearfield{month}}
 % \AtBeginBibliography{\fontsize{11}{11}\sf}
 \setbeamertemplate{frametitle continuation}{}
+
+
+\newcommand{\theHtable}{\thetable}
